--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -1,4 +1,7 @@
 
 
 
-<button (click)="onLogin()">Login</button>
+<button *ngIf="!authenticating" (click)="onLogin()">Login</button>
+
+
+ <p *ngIf="authenticating"> Spinner </p>
