--- a/src/app/permissions/permissions.component.html
+++ b/src/app/permissions/permissions.component.html
@@ -1,3 +1,6 @@
-<p>
-  permissions works!
-</p>
+
+
+Email yada yada Permissions
+
+<button (click)="proceed()"> Allow Access </button>
+<button (click)="exit()" > Dont Allow </button>
