--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,8 @@
-<p>
-  main works!
-</p>
+
+
+
+<button> QuickStart </button>
+<button> More </button>
+<button> Chat </button>
+<button> Help </button>
+<router-outlet></router-outlet>
